Change History Appendix: Added change history for most recent 3 publications
Modified aria-practices.html appendix section to re-add content removed from the master branch in commit 656dc3a.
The apg-1.1 branch now contains APG 1.1 specific content that will not be included in APG 1.2.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4757,7 +4757,163 @@
 
     <section id="change_log" class="appendix">
       <h3>Change History</h3>
-      <p>Change history is maintained in a separate version-specific branch.</p>
+      <section id="change_log_2018_july" class="appendix">
+        <h4>Changes in July 2018 Publication of Note Release 2</h4>
+        <ul>
+          <li>
+            Added the following:
+            <ul>
+              <li>Treegrid design pattern and example</li>
+              <li>Alert dialog example</li>
+            </ul>
+          </li>
+          <li>Significant revisions of guidance or implementation were made to the following design patterns and examples:
+            <ul>
+              <li>Accordion pattern and example, including removing two optional key commands from the pattern.</li>
+              <li>Checkbox example bug fixes</li>
+              <li>ARIA 1.0 Combobox example, including escape key behavior</li>
+              <li>ARIA 1.1 Combobox example labeling</li>
+              <li>Modal dialog example, primarily code refactoring when adding alert dialog</li>
+              <li>Grid pattern, including guidance on column selection</li>
+              <li>Listbox examples</li>
+              <li>Menu pattern, including guidance on menu/submenu structure</li>
+              <li>editor menubar example, including significant improvement to mouse behaviors.</li>
+              <li>Menu button example bug fixes</li>
+              <li>Navigation menubar example bug fixes</li>
+              <li>Radio group example styling</li>
+              <li>Tabs pattern, including labeling guidance</li>
+              <li>Tree view pattern, including multi-select guidance</li>
+              <li>Tree view example bug fixes</li>
+            </ul>
+          </li>
+        </ul>
+        <p>Also see:</p>
+        <ul>
+          <li>
+            <a href="https://github.com/w3c/aria-practices/milestone/1?closed=1">The APG 1.1 Release 2 Milestone</a>:
+            which lists the GitHub issues that document discussions and reviews of changes included in the July 2018 publication.
+          </li>
+          <li>
+            <a href="https://github.com/w3c/aria-practices/wiki/Change-Log-for-July-2018-APG-1.1-Note-Release-2">Detailed change log with links to all commits that are new in the July 2018 publication  since the December 2017 working draft.</a>
+          </li>
+        </ul>
+      </section>
+      <section id="change_log_2017_december" class="appendix">
+        <h4>Changes in December 2017 Publication as Note</h4>
+        <ul>
+          <li>
+            Added the following:
+            <ul>
+              <li>Read Me First section</li>
+              <li>Combobox pattern</li>
+              <li>Combobox examples: 3 ARIA 1.0 style and 4 ARIA 1.1 style</li>
+              <li>Disclosure pattern</li>
+              <li>Feed example display page</li>
+              <li>Grid and table properties guidance section</li>
+              <li>Collapsible dropdown listbox example</li>
+              <li>Multi-thumb slider examples</li>
+              <li>Table pattern and example</li>
+            </ul>
+          </li>
+          <li>The top of each example page now includes a set of four related links to:
+            <ul>
+              <li><Q>Browser and Assistive Technology Support</Q> section of <q>Read Me First</q></li>
+              <li><q>Report Issue</q> page in the Github repository</li>
+              <li><q>Related Issues</q> listed in the Github project for the example</li>
+              <li><q>Design Pattern</q> section that applies to the example</li>
+            </ul>
+          </li>
+          <li>All Javascript and CSS files used by the examples include the correct license and copyright statements.</li>
+          <li>Significant revisions of guidance and implementation were made to the following sections, design patterns, and examples:
+            <ul>
+              <li>Introduction</li>
+              <li>Keyboard guidance for Mac OS</li>
+              <li>Accordion example</li>
+              <li>Mixed checkbox examples</li>
+              <li>Scrollable layout grid example</li>
+              <li>Listbox examples</li>
+              <li>Modal dialog example</li>
+              <li>editor menubar example</li>
+              <li>Navigation menubar example</li>
+              <li>Menu button examples</li>
+              <li>Spinbutton pattern</li>
+              <li>Toolbar example</li>
+              <li>Tree view examples</li>
+            </ul>
+          </li>
+        </ul>
+        <p>Also see:</p>
+        <ul>
+          <li>
+            <a href="https://github.com/w3c/aria-practices/milestone/6">1.1 APG Release 1 milestone,</a>
+            which lists the GitHub issues that document discussions and reviews of changes included in the December 2017 publication.
+          </li>
+          <li>
+            <a href="https://github.com/w3c/aria-practices/wiki/Change-Log-for-December-2017-Note-Release-1">Detailed change log with links to all commits that are new in the December 2017 publication as a Note since the June 2017 working draft.</a>
+          </li>
+        </ul>
+      </section>
+      <section id="change_log_2017_june" class="appendix">
+        <h4>Changes in June 2017 Working Draft</h4>
+        <ul>
+          <li>
+            Added the following:
+            <ul>
+              <li>Modal dialog example</li>
+              <li>Disclosure design pattern</li>
+              <li>Example disclosure for FAQ</li>
+              <li>Example disclosure for image description</li>
+              <li>Draft of feed pattern</li>
+              <li>Example feed implementation</li>
+              <li>Example of menu button using aria-activedescendant</li>
+              <li>Example of tabs with manual activation</li>
+            </ul>
+          </li>
+          <li>Design pattern section: moved examples subsection of each design pattern to be
+            the first subsection.</li>
+          <li>
+            Across all example pages:
+            <ul>
+              <li>Improved visual design of tables that document keyboard implementation,
+                roles, states, and properties.</li>
+              <li>Improved consistency of editorial style.</li>
+            </ul>
+          </li>
+          <li>
+            Significant revisions of guidance and implementation were made to the following design
+            patterns and example pages:
+            <ul>
+              <li>Accordion example</li>
+              <li>Alert example</li>
+              <li>Breadcrumb example</li>
+              <li>Button example</li>
+              <li>Checkbox examples</li>
+              <li>Dialog (modal) design pattern</li>
+              <li>Grid examples</li>
+              <li>Landmark examples</li>
+              <li>Link example</li>
+              <li>Listbox example</li>
+              <li>Menubar examples</li>
+              <li>Menu button examples</li>
+              <li>Radio group example</li>
+              <li>Slider design pattern</li>
+              <li>Slider example</li>
+              <li>Example of tabs with automatic activation</li>
+              <li>Tree view examples</li>
+            </ul>
+          </li>
+        </ul>
+        <p>Also see:</p>
+        <ul>
+          <li>
+            <a href="https://github.com/w3c/aria-practices/issues?q=is%3Aclosed+is%3Aissue+milestone%3A%22Jan+2017+Clean+Up%22+sort%3Aupdated-asc">January 2017 Clean Up Milestone</a>,
+            which lists the GitHub issues that document discussions and reviews of changes included in the June 2017 working draft.
+          </li>
+          <li>
+            <a href="https://github.com/w3c/aria-practices/wiki/Change-Log-for-June-2017-Working-Draft">Detailed change log with links to all commits that are new in the June 2017 working draft.</a>
+          </li>
+        </ul>
+      </section>
     </section>
 
     <div data-include='common/acknowledgements.html' data-include-replace='true'></div>
