--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -135,8 +135,10 @@
               aria-controls="menu1"
               class="item menu-button"
               tabindex="-1"
-              aria-label="Fonts">
-              Fonts
+              aria-label="Font: Sans-serif"
+              style="text-align: left; width: 140px; font-family: sans-serif">
+              SANS-SERIF
+              <span></span>
             </button>
             <ul role="menu" id="menu1" aria-label="Font Family">
               <li role="menuitemradio" aria-checked="true" style="font-family: sans-serif">Sans-serif</li>
@@ -177,7 +179,7 @@
       <label for="textarea1" class="hidden">Text Sample</label><br>
       <textarea id="textarea1" rows="20" cols="80"
         style="font-family: sans-serif">
-Abraham Lincoln's Gettysberg Address
+Abraham Lincoln's Gettysburg Address
 
 Four score and seven years ago our fathers brought forth on this continent a new nation, conceived in Liberty, and dedicated to the proposition that all men are created equal.
 
