--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -129,7 +129,7 @@
                 Cut
             </button>
           </div>
-          <div class="menu-wrapper group" >
+          <div class="menu-popup group" >
             <button
               aria-haspopup="true"
               aria-controls="menu1"
